# sudoku-solver

./: .gitignore  CMakeLists.txt  README.md  sudoku_grid.txt
grids/: ez_1.txt  ez_2.txt
include/: sudoku_grid.h
src/: main.c  sudoku_grid.c
tools/: sudoku_generator.py
